# ts-theory-rust

./: .cagevars  .ctxignore  .gitignore  CLAUDE.md  Cargo.toml  README.md  clippy.toml  deny.toml  dict.infinite.steno  dict.steno  index.html  rust-toolchain.toml  rustfmt.toml
.claude/: settings.json
.context/: .cagevars.ctx  Cargo.lock.ctx  README.md  README.md.ctx  dict.infinite.steno.ctx  dict.steno.ctx  hashes.json  intent.md  rollup.ctx
.context/.github/: hashes.json  rollup.ctx
crates/steno/: .ctxignore  Cargo.toml
crates/steno/.context/.cache/: hook-137137f7-82a8-46a7-a5ea-0fed4ebd0b44.json  hook-190955ad-5246-40a2-978c-a6fd399af952.json
crates/steno/src/: blocks.rs  error.rs  json_out.rs  lib.rs  snippet.rs
crates/steno/src/editor/: interpret.rs  mod.rs  movement.rs  serialize.rs  sim.rs
crates/steno/src/expand/: append.rs  counts.rs  family.rs  fill.rs  lineflag.rs  mod.rs  types.rs
crates/steno/src/expand/infinite/: mod.rs  walk.rs
crates/steno/src/expand/infinite/emit/: data.rs  mod.rs  sample.rs  test.rs
crates/steno/src/parse/: expr.rs  mod.rs  source.rs  template.rs
crates/steno/src/parse/template/: blocks.rs  mod.rs
crates/steno/src/render/: mod.rs  plain.rs  smart.rs
crates/steno/src/snippet/: build.rs  mod.rs
crates/steno/src/stroke/: bank.rs  keys.rs  mod.rs
crates/steno/tests/: blocks.rs  cpp_check.rs  editor.rs  expand.rs  expand_types.rs  infinite.rs  landing_reuse.rs  nvim_plugin.rs  parse_source.rs  parse_template.rs  render.rs  smart.rs  snippet.rs  stroke.rs  stroke_order.rs
docs/: STATUS.md  firmware-build.md  pipeline.md  porting-notes.md  steno-format.md
javelin-ext/: steno_generated_dictionary.cc  steno_generated_dictionary.h  test_main.cc
nvim/: README.md
prompts/: briefer-gather.md  briefer-plan-headless.md  briefer-plan.md  summarizer-leaf.md  summarizer-rollup.md
scripts/: apply_javelin_ext_patch.sh  apply_javelin_steno_split_patch.sh  build_firmware.sh  ci.sh  cpp_check.sh  cycle_check.sh  gen_readme_architecture.sh  gen_tool_contracts.sh  install-tools.sh  javelin_ext_pico.patch  javelin_steno_pico_split.patch  javelin_steno_split.patch  machete_check.sh  no_allow_check.sh  rationale_check.py  retired_terms_check.sh  update-template.sh  workspace_lints_check.sh
viz/: README.md  index.html
(+129 files in other folders)
