# Workspace manifest. Lint configuration here is authoritative for all
# member crates; do not duplicate per-crate.

[workspace]
resolver = "2"
members = [
    "crates/steno",
]

[workspace.lints.rust]
# All compiler warnings are errors. No exceptions.
warnings = "deny"
missing_docs = "deny"
unsafe_code = "forbid"
# Catch unused items aggressively.
dead_code = "deny"
unused_imports = "deny"
unused_must_use = "deny"

[workspace.lints.rustdoc]
broken_intra_doc_links = "deny"
missing_crate_level_docs = "deny"

[workspace.lints.clippy]
# Enable lint groups at warn first so individual restriction lints can be
# layered on. The workspace CI converts warnings to errors via -D warnings.
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }

# Restriction subset. These are NOT in `all` and must be opted into.
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
todo = "deny"
unimplemented = "deny"
unreachable = "deny"
dbg_macro = "deny"
print_stdout = "deny"
print_stderr = "deny"
as_conversions = "deny"
float_arithmetic = "deny"
mem_forget = "deny"
exit = "deny"
get_unwrap = "deny"
indexing_slicing = "deny"
missing_docs_in_private_items = "deny"
string_slice = "deny"
shadow_unrelated = "deny"
shadow_same = "deny"

# Tunable thresholds. Pre-commit scripts also enforce the soft tiers that
# clippy can't express.
too_many_lines = "deny"
cognitive_complexity = "deny"

# Virtual workspace: no root package. All code lives in member crates.
# Note: workspace-level [lints] applies to members that opt in via:
#   [lints]
#   workspace = true
# in their own Cargo.toml. Every member crate in this template must do so.
